# vcf-zarr-publication

./: .gitignore  Makefile  README.md  cover-letter.txt  funding.txt  license.txt  orcids.txt  oup-contemporary.cls  paper.bib  paper.tex  requirements.txt  response-to-reviewers.tex
all_of_us_example/: all_of_us.ipynb  icf_inspect.csv  inspect.csv  storage.ipynb  vcz.ipynb  zarr_inspect2.csv
diagrams/: data-model.tex
gel_example/: Comparison-bcftools.ipynb  Comparison-vcfzarr.ipynb  S3-1-DownloadChunks-MP.ipynb  S3-2-Decompress-MP.ipynb  S3-2.1-Decompress-MP-NoThreads.ipynb  S3-3-AFDist-MP.ipynb  S3-3.1-AFDist-MP-NoThreads.ipynb  S3-throughput-fetch-decompress-afdist.ipynb  S3-throughput-fetch-decompress.ipynb  S3-throughput-fetch-only.ipynb  chr2_if_inspect.csv  chr2_zarr_inspect.csv  file-stats-notebook.ipynb  file-stats-to-csv.ipynb  storage.ipynb  timings-S3-Parallel.ipynb  timings-S3.ipynb
notebooks/: SARS-Cov-2.ipynb  vcztools-benchmarks.ipynb  zarr_cupy_notebook.ipynb
ofh_example/: README.md  storage.ipynb
ofh_example/csvs/: bitround_vcz_inspect.csv  default_vcz_inspect.csv  quantize_vcz_inspect.csv
plot_data/: chunksize_benchmarks.csv  chunksize_finegrained_benchmarks.csv  column-extract.csv  compression_benchmarks.csv  compressor_benchmarks.csv  data-scaling.csv  gel-s3-network-throughput.csv  gel-s3-throughput.csv  shuffle_benchmarks.csv  subset-matrix-compute.csv  whole-matrix-compute-zarr-versions.csv  whole-matrix-compute.csv  whole-matrix-decode.csv
real_data/: Makefile
saige_prototype/: .gitignore  analysis.ipynb  cleanup.sh  env-linux.yml  env.yml  setup.sh
sc2_example/: SARS-Cov-2.ipynb  zarr_inspect.csv
scaling/: Makefile  subset_trees.py
software/: Makefile
software/ts-afdist/: CMakeLists.txt  ts_afdist.cpp
spruce_example/: spruce.ipynb  spruce_icf_inspect.csv  spruce_zarr_inspect.csv  spruce_zarr_json_inspect.csv  storage.ipynb
src/: __init__.py  collect_data.py  compression_benchmarks.py  plot.py  test_zarr_afdist.py  ts_afdist.py  zarr_afdist.py
(+16 files in other folders)
